# tensora-cffi

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tensora_cffi/: __init__.py  compile.py
tests/: test_compile.py
